<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/history_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="41dp"
        android:text="@string/textview_history"
        android:layout_marginLeft="10dp"
        android:layout_alignStart="@+id/maps_textview"
        android:textSize="15sp"/>

    <Switch
        android:id="@+id/maps_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/history_switch"
        android:layout_below="@id/history_switch"
        android:layout_marginTop="29dp"
        android:text="@string/textview_maps"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"/>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/maps_switch"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp" />

    <TextView
        android:id="@+id/maps_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maps_spinner"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/maps_switch"
        android:layout_marginTop="29dp"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"/>

    <Switch
        android:id="@+id/input_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:layout_below="@+id/spinner"
        android:layout_alignStart="@+id/maps_textview"
        android:layout_marginTop="29dp"
        android:layout_alignEnd="@+id/maps_switch"
        android:visibility="invisible"/>


</RelativeLayout>