<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="simon.test.Impressum">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="495dp"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/impressum_name"
            android:textAlignment="center"
            android:textSize="24dp"
            tools:layout_conversion_absoluteX="8dp"
            tools:layout_conversion_absoluteY="33dp"
            tools:layout_conversion_absoluteWidth="368dp"
            tools:layout_conversion_absoluteHeight="28dp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="27dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/impressum_adress"
            android:textAlignment="center"
            android:textSize="24dp"
            tools:layout_conversion_absoluteX="8dp"
            tools:layout_conversion_absoluteY="78dp"
            tools:layout_conversion_absoluteWidth="368dp"
            tools:layout_conversion_absoluteHeight="57dp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/textView1"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/textView1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/impressum_email"
            android:textAlignment="center"
            android:textSize="24dp"
            tools:layout_conversion_absoluteX="8dp"
            tools:layout_conversion_absoluteY="153dp"
            tools:layout_conversion_absoluteWidth="368dp"
            tools:layout_conversion_absoluteHeight="28dp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/textView2"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/impressum_extra"
            android:textAlignment="center"
            android:textSize="24dp"
            tools:layout_conversion_absoluteX="8dp"
            tools:layout_conversion_absoluteY="203dp"
            tools:layout_conversion_absoluteWidth="368dp"
            tools:layout_conversion_absoluteHeight="57dp"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="231dp" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
